# libglade

./: .cvsignore  .gitignore  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  glade-2.0.dtd  glade-2.0.rnc  gnome-widgets.glade  libglade-2.0.pc.in  libglade-config.in  libglade-convert  libglade-convert.in  libglade-xgettext  libglade-zip.in  libglade.m4  libglade.spec  libglade.spec.in  libgladeConf.sh.in  test-libglade.c
doc/: .cvsignore  Makefile.am  Makefile.in  glade-2.0.dia  libglade-docs.sgml  libglade-docs.xml  libglade-sections.txt
doc/tmpl/: glade-build.sgml  glade-parser.sgml  glade-sax.sgml  glade-xml.sgml  glade.sgml  libglade-unused.sgml
examples/: bonobo.glade  example.glade  first.glade  simple.glade
glade/: .cvsignore  Makefile.am  Makefile.in  glade-bonobo.c  glade-build.h  glade-canvas.c  glade-gnomedb.c  glade-gtk.c  glade-init.c  glade-init.h  glade-parser.c  glade-parser.h  glade-private.h  glade-sax.c  glade-styles.c  glade-tree.c  glade-widget-tree.h  glade-xml.c  glade-xml.h  glade.h  makekeys.awk
m4/: .cvsignore
po/: .cvsignore  .gitignore  ChangeLog  POTFILES.in  da.po  de.po  ko.po  no.po  pt_BR.po  tr.po
test/: .cvsignore  Makefile  domp.c  results  saxp.c  small.glade  states.dia  widget-tree.h
tests/: .cvsignore  Makefile.am  Makefile.in  test-libglade-gtk-noupgrade.c  test-libglade-gtk.c  test-libglade-gtk.glade
