-*- mode: m4 -*-
AC_PREREQ(2.52)
AC_INIT(libglade, 1.99.3,
        [http://bugzilla.gnome.org/enter_bug.cgi?product=libglade])

AC_CONFIG_SRCDIR([test-libglade.c])
AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

dnl get the gnome-common macros
GNOME_COMMON_INIT

AC_ARG_ENABLE(debug,
  AC_HELP_STRING([--enable-debug], [enable debugging output]),,
  [enable_debug=no])

if test "x$enable_debug" != xno; then
  AC_DEFINE(DEBUG, [Turn on a bit of debugging spew])
fi

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h, AC_DEFINE(HAVE_UNISTD_H))

AM_PROG_LIBTOOL

AM_PATH_GTK_2_0(1.3.9)

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

PKG_CHECK_MODULES(LIBGLADE, libxml-2.0 >= 2.4.1 atk >= 0.6 gtk+-2.0 >= 1.3.9)
AC_SUBST(LIBGLADE_LIBS)
AC_SUBST(LIBGLADE_CFLAGS)

AC_CHECK_PROG(GTKDOC, gtkdoc-mkdb, true, false)
AM_CONDITIONAL(HAVE_GTK_DOC, $GTKDOC)

dnl gettext stuff ... there is no message catalog for libglade -- libglade
dnl provides translation for the XML files it reads in.
GETTEXT_PACKAGE=libglade-2.0
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

dnl stuff to go in the config.h file
AH_TOP(
[#ifndef CONFIG_H
#define CONFIG_H])
AH_BOTTOM(
[#ifdef DEBUG
#  define debug(stmnt) stmnt
#else
#  define debug(stmnt) /* nothing */
#endif

#endif])

AC_OUTPUT([
Makefile
libglade.spec
glade/Makefile
doc/Makefile
libglade-2.0.pc])

rm -f po/po2tbl.sed

echo
echo "This is the development branch of libglade"
echo "If you want something that works with gtk+ 1.2, checkout the"
echo "libglade-1-0 branch with the following command"
echo "  cvs update -r libglade-1-0 ."
echo
